--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,18 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9",
+    "puppeteer": "^23.11.1",
+    "user-agents": "^1.1.398"
   }
 }
